RESOLVED FIXED229518
[iOS] Visual Look Up animates from the wrong rect when the web view is scaled
https://bugs.webkit.org/show_bug.cgi?id=229518
Summary [iOS] Visual Look Up animates from the wrong rect when the web view is scaled
Wenson Hsieh
Reported 2021-08-25 14:39:14 PDT
Attachments
Patch (2.09 KB, patch)
2021-08-25 14:41 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Wenson Hsieh
Comment 1 2021-08-25 14:41:02 PDT
Darin Adler
Comment 2 2021-08-25 14:47:29 PDT
Comment on attachment 436427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436427&action=review > Source/WebKit/ChangeLog:14 > + Fix this by first converting `_visualSearchPreviewImageBounds` to window coordinates. And dropping the origin, using only the size? Is that correct.
Wenson Hsieh
Comment 3 2021-08-25 14:52:41 PDT
Comment on attachment 436427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436427&action=review >> Source/WebKit/ChangeLog:14 >> + Fix this by first converting `_visualSearchPreviewImageBounds` to window coordinates. > > And dropping the origin, using only the size? Is that correct. Yes, I believe this is correct. The `origin` of `outContentRect` is used to additionally offset the previewed item frame (in window coordinates), while the `size` replaces the size of the previewed item frame. In this case, `_visualSearchPreviewImageBounds` already provided the correct frame for the previewed item in the coordinate space of `sourceView` (WKContentView), so no additional offset is needed.
Wenson Hsieh
Comment 4 2021-08-25 16:11:52 PDT
Comment on attachment 436427 [details] Patch Thanks for the review!
EWS
Comment 5 2021-08-25 16:39:19 PDT
Committed r281599 (240960@main): <https://commits.webkit.org/240960@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436427 [details].
Note You need to log in before you can comment on or make changes to this bug.