[iOS] Visual Look Up animates from the wrong rect when the web view is scaled https://bugs.webkit.org/show_bug.cgi?id=229518 rdar://82147473

Reviewed by Darin Adler.

When adopting QLPreviewControllerDelegate's animated transition methods for rdar://76020349, I mistakenly
thought that the `outContentRect` passed into `-previewController:transitionImageForPreviewItem:contentRect:`
would be in source view (WKContentView) coordinates; instead, QuickLook expects this `contentRect` to be in
window coordinates.

Fix this by first converting `_visualSearchPreviewImageBounds` to window coordinates.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView previewController:transitionImageForPreviewItem:contentRect:]):


Canonical link: https://commits.webkit.org/240960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281599 268f45cc-cd09-0410-ab3c-d52691b4dbfc